--- a/Иван Желев/h2.html
+++ b/Иван Желев/h2.html
@@ -207,7 +207,10 @@
          previous champion:
          Olympiacos
 </p>
-
+<footer class="cp1">
+   © Copyright Google .com, transfermarket.com,redit.com.©F⚽⚽T news.Web design Visual studio code.
+Powered and protected by git.
+</footer>
 
 
 
