--- a/Иван Желев/h1.html
+++ b/Иван Желев/h1.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<header> F⚽⚽T news</header>
+<header class="titler"> F⚽⚽T news</header>
 <title> F⚽⚽T news </title>
-
+<header class="titlep"> Main page</header>
   <button class="button-1MP"> Main Page </button>
   <button type="button"  onclick="openAnotherPage()" class="button-2EF"> Europe football </button>
   <button class="button-3BD"> ballon d'or </button>
@@ -10,7 +10,15 @@
   <button class="button-5TL"> Top 5 leagues </button>
   <button class="button-6"> FIFA </button>
 <style>  
-    header{
+    .titlep{
+    position: absolute;
+    width: 40%;
+    left: 0%;
+    font-size: 200%;
+    top: 15%;
+   }  
+
+    .titler{
         background-color: aqua;
         height: 15%;
         width: 100% ;
