--- a/Иван Желев/h2.html
+++ b/Иван Желев/h2.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-<header> F⚽⚽T news</header>
+<header class="titler"> F⚽⚽T news</header>
 <title> F⚽⚽T news </title>
+<header class="titlep"> Europe football</header>
 
   <button class="button-1MP" type="button" onclick="openAnotherPage()"> Main Page </button>
   <button class="button-2EF"> Europe football </button>
@@ -10,7 +11,14 @@
   <button class="button-5TL"> Top 5 leagues </button>
   <button class="button-6"> FIFA </button>
 <style>  
-    header{
+    .titlep{
+    position: absolute;
+    width: 40%;
+    left: 0%;
+    font-size: 200%;
+    top: 15%;
+   }   
+    .titler{
         background-color: aqua;
         height: 15%;
         width: 100% ;
