--- a/Иван Желев/h1.html
+++ b/Иван Желев/h1.html
@@ -237,7 +237,7 @@ y0lMTG4e8ig_Z2upL0J52-2oxW_cmfvIguyAGQVWKn1ejQqFc4Ygfu8GAo-bnM03mDJegnKivCDQER7W
 class="table">
 Full table
 </a>
-<img src="c:\Users\aio\Pictures\Saved Pictures\1638803126516-264c5e163f50c1c559bb3408b33e0b1d.jpeg" 
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScFH97qRuLPUpxfczTvGhJ5MPO5DWeqVrmug&s" 
 class="logo">
 
 
